# plights

./: Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  pio.cpp  pio.hpp  playback.cpp  record.cpp  track.cpp  track.hpp
src/test/: Makefile.am  hwtest.c
xmms-plugin/: .in  Makefile.am  autogen.sh  configure.ac  plights.c
